fix homepage image padding on small screens

--- a/devopsdisasters/static/css/style.css
+++ b/devopsdisasters/static/css/style.css
@@ -211,7 +211,7 @@ a:focus {
 
 #headerwrap {
 	background-color: #00b3fe;
-	min-height: 550px;
+/*      min-height: 550px; */
 	padding-top: 100px;
 	padding-bottom: 0px;
 	text-align: center;
